infrastructure/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
